# oap-spec

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-SPEC  MAINTAINERS.md  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES.md
adapters/: README.md
bench/: README.md  perf.js
examples/: README.md
governance/: CHARTER.md  MAINTAINER-ORG-CHARTER.md  MAINTAINERS.md  README.md  RFC-PROCESS.md  WORKING-GROUPS.md
papers/: accountability-in-the-agent-economy.md  agent-web-whitepaper.md  confidentiality-and-compliance-context.md  economics-of-the-agent-economy.md  governance-of-an-ownerless-protocol.md  interoperability-versus-platforms.md  safety-and-policy-stack.md  verifiable-conformance.md
rfcs/: README.md  RFC-0001-sessions.md  RFC-0002-negotiation.md  RFC-0003-standing-permissions.md  RFC-0004-delegation.md  RFC-0005-entities.md  RFC-0006-personas.md  RFC-0007-projections.md  RFC-0008-workflows.md  RFC-0009-reputation.md  RFC-0010-memory-exchange.md  RFC-0011-sybil-resistance.md  RFC-0012-agent-native-web.md  RFC-0013-commerce-models.md  RFC-0014-commerce-primitives.md  RFC-0015-composable-software-primitives.md  RFC-0016-user-sovereignty-charter.md  RFC-0017-irreversibility-and-cooling-off.md  RFC-0018-right-to-human-path.md  RFC-0019-conformance-testing-and-implementability.md  RFC-0020-agent-query-language.md  RFC-0021-verifiable-indexes.md  RFC-0022-manifest-subscription-protocol.md  RFC-0023-agent-native-storage-substrate.md  RFC-0024-schema-negotiation-and-versioning.md  RFC-0026-registry-protocol.md  (+12 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/oap_sdk/: __init__.py  aht.py  manifest.py  memory.py  model_risk.py  organization.py  server.py  signing.py  storage.py  subscription.py  types.py
sdks/python/tests/: test_smoke.py
(+248 files in other folders)
