[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oap-sdk"
version = "1.0.0rc1"
description = "Official Python SDK for the Open Agent Protocol (OAP). Build OAP-conformant tool servers with manifest publishing, signed invocation, hash-chained receipts, and conformance attestation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["oap", "open-agent-protocol", "agent", "ai", "manifest", "did", "ed25519"]
authors = [
  { name = "Open Agent Protocol contributors" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "cryptography>=42.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "build>=1.0",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://openagentprotocol.eu/sdks"
Documentation = "https://openagentprotocol.eu/sdks"
Repository = "https://github.com/openagentprotocol-OAP/oap-spec"
Issues = "https://github.com/openagentprotocol-OAP/oap-spec/issues"
Changelog = "https://github.com/openagentprotocol-OAP/oap-spec/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/oap_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/oap_sdk", "README.md", "LICENSE"]
